.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:29:57 **** Incremental Build of configuration Debug for project VGA_core_M4 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -Wall -Werror ..\Libraries\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_hash.c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DSTM32F4XX -DSTM32F40XX -DUSE_STDPERIPH_DRIVER -DUSE_STM32F4_DISCOVERY -DHSE_VALUE=8000000 -I../src -I../Libraries/CMSIS/Include -I../Libraries/Device/STM32F4xx/Include -I../Libraries/STM32F4xx_StdPeriph_Driver/inc -I../Utilities/STM32F4-Discovery -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ub_lib -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ports -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\api.lib -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Libraries\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_hash.o 
arm-atollic-eabi-gcc -c -Wall -Werror ..\src\stm32f4xx_it.c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DSTM32F4XX -DSTM32F40XX -DUSE_STDPERIPH_DRIVER -DUSE_STM32F4_DISCOVERY -DHSE_VALUE=8000000 -I../src -I../Libraries/CMSIS/Include -I../Libraries/Device/STM32F4xx/Include -I../Libraries/STM32F4xx_StdPeriph_Driver/inc -I../Utilities/STM32F4-Discovery -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ub_lib -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ports -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\api.lib -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\stm32f4xx_it.o 
arm-atollic-eabi-gcc -c -Wall -Werror ..\src\ui.c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DSTM32F4XX -DSTM32F40XX -DUSE_STDPERIPH_DRIVER -DUSE_STM32F4_DISCOVERY -DHSE_VALUE=8000000 -I../src -I../Libraries/CMSIS/Include -I../Libraries/Device/STM32F4xx/Include -I../Libraries/STM32F4xx_StdPeriph_Driver/inc -I../Utilities/STM32F4-Discovery -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ub_lib -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\ports -IC:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\api.lib -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\ui.o 
..\src\ui.c: In function 'UART_control':
..\src\ui.c:86:9: error: too few arguments to function 'bitmap'
   err = bitmap(atoi(array[1]), atoi(array[2]), atoi(array[3]), atoi(array[4]));
         ^~~~~~
In file included from ..\src\ui.c:10:0:
C:\Users\Nick\Documents\Dropbox\A Semester 6\Software ontwikkeling error\VGA_core_M4\src\api.lib/draw_API.h:45:9: note: declared here
 uint8_t bitmap(uint8_t bitmap, int16_t x1, int16_t y1, uint8_t trans, uint8_t *perr);
         ^~~~~~
